--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -6,30 +6,32 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
+margin: 0;
+padding: 0;
     height: 7vh;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     top: 0;
     z-index: 100;
 }
-#navbar-header-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    max-width: 100%;
-    padding: 0 20px;
-}
+
+
 .authButtons {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 90%;
     max-width: 100%;
     padding: 0 20px;
+}
+.navbarcenter{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    color: black;
+  
 }
