--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 #navbar-outer-container {
-    background-color: #fff;
-    border-bottom: 1px solid #e6e6e6;
+    background-color: transparent;
+
     position: fixed;
     display: flex;
     flex-direction: row;
@@ -25,6 +25,7 @@ padding: 0;
     width: 90%;
     max-width: 100%;
     padding: 0 20px;
+    margin: 0;
 }
 .navbarcenter{
     display: flex;
