--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,7 +5,8 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    background-color: #282c34;
-    font-size: calc(10px + 2vmin);
+    background-color: #e2e2e2;
     color: white;
+  
 }
+
