--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -3,53 +3,45 @@
     width: 100vw;
     margin: 0;
     display: flex;
-    background-image: url('https://img.freepik.com/free-photo/beautiful-pet-portrait-dog_23-2149218450.jpg?w=1480&t=st=1691268991~exp=1691269591~hmac=739c8462ae219d8ccfb8b586d79943c99bdcd8f46ce8d599c7924984b9b2186a');
-    background-size: cover;
-    background-repeat: no-repeat;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-}
-
-.landingContent{
-display: flex;
-flex-direction: row;
-justify-content: center;
-width: 50vw;
-
-}
-.landingImage {
-    position: absolute;
+    position: relative; /* Add position relative to the parent container */
+    background-image: url(https://live.staticflickr.com/65535/53096318282_6b017fa4e9_h.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+  .landingSub {
     height: 100vh;
-    width: 50vw;
-    left: 0;
-    margin: 0;
+  }
+  .landingImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the container */
+  }
+  
+  .landingInfo {
+    position: absolute; /* Use absolute positioning to overlay the image */
+    top: 50%;
+    left: 70%;
+    transform: translate(-50%, -50%); /* Center the landing info container */
+    padding: 20px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-
-
-}
-.landingImage img {
-    height: 100vh;
-    opacity: 0.8;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-.landingInfo {
-    height: 100vh;
-    width: 30vw;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: flex-end;
-   
-}
+
+  }
+  
+  .landing-title {
+    font-size: 2rem;
+    margin-bottom: 10px;
+  }
+  
+
+  
 
 .landingInfo h1 {
     font-size: 3.3rem;
@@ -62,7 +54,7 @@ width: 50vw;
     margin-bottom: 2vh;
 }
 .landingInfo h2 {
-    font-size: 1.5rem;
+    font-size: 1.35rem;
     margin: 0;
     padding: 0;
     margin-bottom: 2vh;
@@ -81,6 +73,27 @@ width: 50vw;
     justify-content: center;
     align-items: center;
     background-color: var(--header-main);
+    color: #fff;
+    font-weight: 700;
     border-radius: 10px;
     border: 0;
+    
+}
+.landingButton:hover{
+    background-color: var(--header-main-hover);
+    color: var(--header-main);
+    border: 3px solid var(--header-main);
+    cursor: pointer;
+}
+
+@media screen and (max-width: 750px) {
+    .landing {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    
 }
