--- a/src/pages/SignInSignUp/Components/SignUp/SignUp.css
+++ b/src/pages/SignInSignUp/Components/SignUp/SignUp.css
@@ -1,11 +1,10 @@
 .sign-form {
-    background-color: rgb(0, 0, 0);
-   
+    background-color: rgb(104, 104, 101);
     width: 100%;
     position: absolute;
     height: 100vh;
     margin: 0;
-    top:7vh;
+    top:0vh;
     left:0;
     display: flex;
     flex-direction: column;
@@ -20,6 +19,24 @@
     justify-content: center;
     width: 100%;
     margin-bottom: 2vh;
+}
+.sign-form button {
+    border-radius: 10px;
+    border: none;
+    padding: 1vh;
+    width:8rem;
+    font-size: 0.8rem;
+    font-weight: 700;
+    background-color: var(--header-main);
+}
+input {
+    width: 20%;
+    height: 3rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-size: 1.2rem;
 }
 a {
     color: #fff;
@@ -44,3 +61,41 @@ a {
 #closeForm:hover {
     color: #ff6565;
 }
+
+.sign-in-link {
+    margin-bottom: 2vh;
+}
+
+.animate-pop-in {
+    animation: pop-in 0.4s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
+    opacity: 0;
+  }
+  
+  .sign-in-link{
+    animation-delay: 0.6s;
+  }
+  
+
+ .signUpForm form {
+    animation-delay: 0.7s;
+  }
+  
+  .signUpTitle {
+    animation-delay: 0.5s;
+  }
+  
+  .header-button {
+    animation-delay: 1.1s;
+  }
+
+  @keyframes pop-in {
+    0% {
+      opacity: 0;
+      transform: translateY(-4rem) scale(.8);
+    }
+    100% {
+      opacity: 1;
+      transform: none;
+    }
+  }
+  
