--- a/src/pages/SignInSignUp/SignInSignUp.css
+++ b/src/pages/SignInSignUp/SignInSignUp.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
   height: 100vh;
     width: 100vw;
+    top:0;
 }
 
 .signInUpComponents {
@@ -10,8 +11,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50vw;
+    width: 100vw;
     height: 100vh;
+    margin: 0;
 }
 
 #signInUpButtons{
@@ -24,20 +26,32 @@
  
 }
 
-#SignIn{
+#SignIn, #dropdown-menu-signout-button{
     border-radius: 10px;
     border: none;
     padding: 1vh;
     width:8rem;
     font-size: 0.8rem;
     font-weight: 700;
-    background-color:rgb(255, 255, 255) ;
-
+    background-color: var(--header-main);
 
 }
 #SignUp{
     background: none;
     text-decoration: underline;
     border: none;
+    font-weight: 600;
 
+}
+ #dropdown-menu-signout-button:hover{
+    background-color: var(--header-main-hover);
+    color: var(--header-main);
+    border: 1px solid var(--header-main);
+    cursor: pointer;
+}
+#SignIn:hover{
+    background-color: var(--header-main-hover);
+    color: var(--header-main);
+    border: 3px solid var(--header-main);
+    cursor: pointer;
 }
