--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,8 +5,7 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    background-color: #e2e2e2;
+    background-color: #e7e0bd;
     color: white;
   
 }
-
