--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -7,10 +7,22 @@
     align-items: center;
     margin: 0;
     padding: 0;
-    height: 7vh;
+    height: 10vh;
     width: 100vw;
     top: 0;
     z-index: 100;
+  }
+
+  #navbar-title {
+  position: absolute;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.2rem;
+    font-weight: 300;
+    color: var(--header-main);
+    z-index: 100;
+    left:45%;
   }
   #navbar-container {
     position: sticky;
@@ -32,7 +44,9 @@
     height: 100%;
     padding: 0 20px;
     margin: 0;
+    width: 20vw;
     z-index: 100;
+    margin-right: 3vw;
   }
   
   .navbarcenter {
@@ -71,5 +85,32 @@
   
   .additionalMenu a:hover {
     color: #007bff;
+  }
+  
+
+  @media screen and (max-width: 750px)
+  {
+    button#SignIn{
+    display: none;
+   }
+   button#SignUp{
+    display: none;
+   }
+   .mobile {
+    display: flex;
+   }
+   #mobileSignUp img {
+    width: 8vw;
+    height: 8vw;
+ 
+   }
+   #mobileSignIn {
+ 
+   }
+   #navbar-title {
+    font-size: 1.5rem;
+      left:30%;
+    }
+    
   }
   
