--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -31,7 +31,7 @@
     position: absolute; /* Use absolute positioning to overlay the image */
     top: 50%;
     left: 70%;
-    width: 100vw;
+    
     transform: translate(-50%, -50%); /* Center the landing info container */
     padding: 20px;
     border-radius: 10px;
@@ -51,7 +51,7 @@
   
 
 .landingInfo h1 {
-    font-size: 3.3rem;
+    font-size: 3rem;
     margin: 0;
     padding: 0;
     color:var(--header-main);
@@ -61,7 +61,7 @@
     margin-bottom: 2vh;
 }
 .landingInfo h2 {
-    font-size: 1.35rem;
+    font-size: 1.1rem;
     margin: 0;
     padding: 0;
     margin-bottom: 2vh;
@@ -92,6 +92,24 @@
     border: 3px solid var(--header-main);
     cursor: pointer;
 }
+
+
+@media screen and (max-width: 1200px) {
+  
+ 
+    .landingInfo h1 {
+      text-align: right;
+      font-size: 2.6rem;
+      font-weight: 600;
+      width: 40vw;
+    } 
+    .landingInfo h2{
+      text-align: right;
+      font-size: 1.1rem;
+      width: 40vw;
+    } 
+  }
+
 
 @media screen and (max-width: 750px) {
     .landing {
