--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -90,9 +90,7 @@
 
   @media screen and (max-width: 750px)
   {
-    button#SignIn{
-    display: none;
-   }
+ 
    button#SignUp{
     display: none;
    }
@@ -113,4 +111,9 @@
     }
     
   }
-  
+  @media screen and (max-width: 430px)
+  {
+ 
+
+
+  }
