--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -42,11 +42,11 @@
     justify-content: flex-end;
     align-items: center;
     height: 100%;
-    padding: 0 20px;
+    padding: 0;
     margin: 0;
     width: 20vw;
     z-index: 100;
-    margin-right: 3vw;
+    
   }
   
   .navbarcenter {
