--- a/src/pages/SignInSignUp/SignInSignUp.css
+++ b/src/pages/SignInSignUp/SignInSignUp.css
@@ -26,8 +26,8 @@
     align-items: center;
     border: none;
     padding: 1vh;
-    width:6.5rem;
-    height:2.5rem;
+    width:6rem;
+    height:5.5vh;
     font-size: 0.8rem;
     font-weight: 700;
     background: transparent;
@@ -54,5 +54,16 @@
 #SignIn:hover{
     cursor: pointer;
     opacity: 0.8;
+
+}
+
+@media screen and (max-width: 500px)
+{
+
+  #SignIn img {
+    height: 3.5vh;
+    
+  }
+
 
 }
