--- a/src/pages/SignInSignUp/Components/SignUp/SignUp.css
+++ b/src/pages/SignInSignUp/Components/SignUp/SignUp.css
@@ -24,24 +24,33 @@
     justify-content: center;
     width: 100%;
     margin-bottom: 2vh;
+    border-radius:17.4rem;
 }
 .sign-form button {
-    border-radius: 10px;
+    border-radius: 17.4rem;
     border: none;
-    padding: 1vh;
-    width:8rem;
+    padding: 2.5vh 6vw 2.6vh;
+
     font-size: 0.8rem;
+    color: #fff;
     font-weight: 700;
     background-color: var(--header-main);
 }
+.sign-form button:hover {
+    background-color: transparent;
+    color: var(--header-main);
+    border: 4px solid var(--header-main);
+    cursor: pointer;
+}
 input {
-    width: 20%;
+    width: 30vw;
     height: 3rem;
     margin-bottom: 1rem;
     border: none;
     border-radius: 5px;
     padding: 0 1rem;
     font-size: 1.2rem;
+    border-radius:17.4rem;
 }
 a {
     color: #fff;
@@ -65,6 +74,7 @@ a {
 }
 #closeForm:hover {
     color: #ff6565;
+    cursor: pointer;
 }
 
 .sign-in-link {
@@ -104,3 +114,29 @@ a {
     }
   }
   
+
+
+
+  
+  @media screen and (max-width:800px) {
+    input {
+      width: 70%;
+      height: 3.5rem;
+      margin-bottom: 1rem;
+      border: none;
+    
+      padding: 0 1rem;
+      font-size: 1.2rem;
+  }
+  .sign-form button {
+    border-radius: 17.4rem;
+    border: none;
+    padding: 2.5vh 6vw 2.6vh;
+
+    font-size: 0.8rem;
+    color: #fff;
+    font-weight: 700;
+    background-color: var(--header-main);
+}
+    
+    }
