some menu styles and getstarted page

--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -82,7 +82,7 @@
     background-color: var(--header-main);
     color: #ffffff;
     font-weight: 700;
-    border-radius: 30px;
+    border-radius: 17.4rem;
     border: 0;
     
 }
