--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -12,6 +12,29 @@
     top: 0;
     z-index: 100;
   }
+  .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    width: 20vw;
+    z-index: 100;
+    position: relative;
+  }
+  .menu img {
+    width: 8vw;
+    height: 8vw;
+    position: absolute;
+    left: 0;
+
+  }
+  .menu img:hover {
+    cursor: pointer;
+    opacity: 0.7;
+  }
 
   #navbar-title {
   position: absolute;
@@ -60,31 +83,44 @@
 
   .additionalMenu {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 10vh;
+    border-bottom-right-radius: 10vh;
+    background-color: #2d82dd;
     top: 100%;
     left: 0;
-    width: 50vw;
-    height: 100vh;
+    width: 100vw;
+    height: 110vh;
+    color: azure;
+    margin-top: -20vh;
     padding: 10px;
     z-index: 10;
   }
   
   .additionalMenu ul {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    display: block;
+    font-size: 5.6rem;
+    font-weight: 500;
+    text-align: center;
+    
   }
   
   .additionalMenu li {
     margin-bottom: 10px;
+    
   }
   
   .additionalMenu a {
     text-decoration: none;
-    color: black;
+    color: var(--header-main);
   }
   
   .additionalMenu a:hover {
-    color: #007bff;
+    color: var(--header-main);;
   }
   
 
