--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -106,6 +106,16 @@ form.surveyForm {
     border: 4px solid var(--header-main);
     cursor: pointer;
 }
+.dropdownOptions {
+    width: 30vw;
+    height: 3rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    border-radius:17.4rem;
+}
 
 @media screen and (max-width:750px){
     
