--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -21,15 +21,25 @@
     justify-content: center;
     background-color: #eed8ed;
     z-index: 1;
-    height: 13rem;
-    width: 13rem;    
+    height: 12rem;
+    width: 15rem;    
     border-radius: 2em;
-    margin-right: 1vw;
-    margin-bottom: 1vh;
+    margin-right: 2vw;
+    margin-bottom: 4vh;
 }
 .infoBox p {
     color: #242424;
     font-size: 14px;
+    line-height: 1.33;
+    margin-bottom: 0;
+    margin-top: 0;
+    text-align: center;
+    padding: 1rem 1rem;
+}
+.getStarted h1 {
+    color: #242424;
+    font-size: 3rem;
+    font-weight: 700;
     line-height: 1.33;
     margin-bottom: 0;
     margin-top: 0;
@@ -62,4 +72,18 @@
     color: var(--header-main);
     border: 4px solid var(--header-main);
     cursor: pointer;
+}
+
+.bkgrndFloat{
+    position: absolute;
+    bottom: 0;
+    left: 10vw;
+    
+}
+.bkgrndFloatImg {
+    height: 40vh;
+    
+    margin: 0;
+    padding: 0;
+    z-index: 0;
 }
