--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -29,12 +29,13 @@
 }
 .infoBox p {
     color: #242424;
-    font-size: 14px;
+    font-size: 0.8rem;
     line-height: 1.33;
     margin-bottom: 0;
     margin-top: 0;
     text-align: center;
     padding: 1rem 1rem;
+    
 }
 .getStarted h1 {
     color: #242424;
@@ -43,13 +44,25 @@
     line-height: 1.33;
     margin-bottom: 0;
     margin-top: 0;
+    padding: 0;
     text-align: center;
-    padding: 1rem 1rem;
-}
 
+}
+.getStartedP{
+    color: #242424;
+    font-size: 1.3rem;
+    font-weight: 400;
+    line-height: 1.33;
+    margin-bottom: 0;
+    margin-top: 0;
+    width: 50vw;
+    padding: 0;
+    text-align: center;
+    margin-bottom: 2rem;
+}
 .infoBoxImg {
-    height: 2em;
-    width: 2em;
+    height: 1.6em;
+    width: 1.6em;
 }
 
 .getStartedButton {
@@ -86,4 +99,11 @@
     margin: 0;
     padding: 0;
     z-index: 0;
+}
+
+@media screen and (max-width: 430px){
+
+
+
+
 }
