--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -42,7 +42,7 @@
     font-size: 3rem;
     font-weight: 700;
     line-height: 1.33;
-    margin-bottom: 0;
+    margin-bottom: 1vh;
     margin-top: 0;
     padding: 0;
     text-align: center;
