--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -1,109 +1,119 @@
-.getStarted {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin-top: -10vh;
-    width: 100vw;
-    background-color: #f7f7f7;
+    .getStarted {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin-top: -10vh;
+        width: 100vw;
+        background-color: #f7f7f7;
 
-}
+    }
 
-.infoBox {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #eed8ed;
-    z-index: 1;
-    height: 12rem;
-    width: 15rem;    
-    border-radius: 2em;
-    margin-right: 2vw;
-    margin-bottom: 4vh;
-}
-.infoBox p {
-    color: #242424;
-    font-size: 0.8rem;
-    line-height: 1.33;
-    margin-bottom: 0;
-    margin-top: 0;
-    text-align: center;
-    padding: 1rem 1rem;
+    .infoBox {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #eed8ed;
+        z-index: 1;
+        height: 12rem;
+        width: 15rem;    
+        border-radius: 2em;
+        margin-right: 2vw;
+        margin-bottom: 4vh;
+    }
+    .infoBox p {
+        color: #242424;
+        font-size: 0.8rem;
+        line-height: 1.33;
+        margin-bottom: 0;
+        margin-top: 0;
+        text-align: center;
+        padding: 1rem 1rem;
+        
+    }
+    .getStarted h1 {
+        color: #242424;
+        font-size: 3rem;
+        font-weight: 700;
+        line-height: 1.33;
+        margin-bottom: 1vh;
+        margin-top: 0;
+        padding: 0;
+        text-align: center;
+
+    }
+    .getStartedP{
+        color: #242424;
+        font-size: 1.3rem;
+        font-weight: 400;
+        line-height: 1.33;
+        margin-bottom: 0;
+        margin-top: 0;
+        width: 50vw;
+        padding: 0;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+    .infoBoxImg {
+        height: 1.6em;
+        width: 1.6em;
+    }
+
+    .getStartedButton {
+        height: 5rem;
+        width: 12rem;
+        margin: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--header-main);
+        color: #ffffff;
+        font-weight: 700;
+        border-radius: 17.4rem;
+        border: 0;
+        
+    }
+    .getStartedButton:hover{
+        background-color: var(--header-main-hover);
+        color: var(--header-main);
+        border: 4px solid var(--header-main);
+        cursor: pointer;
+    }
+
+    .bkgrndFloat{
+        position: absolute;
+        bottom: 0;
+        left: 10vw;
+        
+    }
+    .bkgrndFloatImg {
+        height: 40vh;
+        
+        margin: 0;
+        padding: 0;
+        z-index: 0;
+    }
+
+    @media screen and (max-width: 430px){
+
     
-}
-.getStarted h1 {
-    color: #242424;
-    font-size: 3rem;
-    font-weight: 700;
-    line-height: 1.33;
-    margin-bottom: 1vh;
-    margin-top: 0;
-    padding: 0;
-    text-align: center;
-
-}
-.getStartedP{
-    color: #242424;
-    font-size: 1.3rem;
-    font-weight: 400;
-    line-height: 1.33;
-    margin-bottom: 0;
-    margin-top: 0;
-    width: 50vw;
-    padding: 0;
-    text-align: center;
-    margin-bottom: 2rem;
-}
-.infoBoxImg {
-    height: 1.6em;
-    width: 1.6em;
-}
-
-.getStartedButton {
-    height: 5rem;
-    width: 12rem;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--header-main);
-    color: #ffffff;
-    font-weight: 700;
-    border-radius: 17.4rem;
-    border: 0;
-    
-}
-.getStartedButton:hover{
-    background-color: var(--header-main-hover);
-    color: var(--header-main);
-    border: 4px solid var(--header-main);
-    cursor: pointer;
-}
-
-.bkgrndFloat{
-    position: absolute;
-    bottom: 0;
-    left: 10vw;
-    
-}
-.bkgrndFloatImg {
-    height: 40vh;
-    
-    margin: 0;
-    padding: 0;
-    z-index: 0;
-}
-
-@media screen and (max-width: 430px){
+    .bkgrndFloatImg {
+        height: 20vh;
+        display: none;
+        left: auto;
+        right: 0;
+        
+        margin: 0;
+        padding: 0;
+        z-index: 0;
+    }
 
 
-
-
-}
+    }
