--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -47,6 +47,37 @@
       z-index: 100;
       left:45%;
     }
+
+   .signup {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      margin-right: 10px;
+      width: 20vw;
+      z-index: 100;
+      color: var(--header-main);
+      font-size: 1rem;
+    }
+
+    .signin {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      align-items: center;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      margin-right: 10px;
+      width: 20vw;
+      z-index: 100;
+      color: var(--header-main);
+      font-size: 1rem;
+    }
+
     #navbar-container {
       position: sticky;
       top: 0;
@@ -59,7 +90,7 @@
     .navbar-hidden {
       transform: translateY(-100%);
     }
-    .authButtons {
+    /* .authButtons {
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
@@ -70,7 +101,7 @@
       width: 20vw;
       z-index: 100;
       
-    }
+    } */
     
     .navbarcenter {
       display: flex;
