--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -153,6 +153,49 @@
     .additionalMenu a:hover {
       color: var(--header-main);;
     }
+
+    .additionalSignInMenu {
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border-bottom-left-radius: 10vh;
+      border-bottom-right-radius: 10vh;
+      background-color: #2d82dd;
+      top: 100%;
+      left: 0;
+      width: 100vw;
+      height: 105vh;
+      color: azure;
+      margin-top: -20vh;
+      padding: 10px;
+      z-index: 10;
+    }
+    
+    .additionalSignInMenu ul {
+      list-style: none;
+      display: block;
+      font-size: 5.6rem;
+      font-weight: 500;
+      text-align: center;
+      
+    }
+    
+    .additionalSignInMenu li {
+      margin-bottom: 10px;
+      
+    }
+    
+    .additionalSignInMenu a {
+      text-decoration: none;
+      color: var(--header-main);
+    }
+    
+    .additionalSignInMenu a:hover {
+      color: var(--header-main);;
+    }
+
     
 
     @media screen and (max-width: 750px)
