--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -3,11 +3,14 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  padding-bottom: 70px;
+  /* border: 1px solid #f3eddb; */
+  /* border-radius: 8px; */
+  border-bottom-left-radius: 10vh;
+  border-bottom-right-radius: 10vh;
   max-width: 400px;
   margin: 0 auto;
-  background-color: #f5f5f5;
+  background-color: #f3eddb;
 }
 
 
@@ -20,9 +23,8 @@
       flex-direction: column;
       align-items: flex-end;
       justify-content: flex-end;
-      
-      
   }
+  
   .mobile {
     display: none;
   }
@@ -35,6 +37,7 @@
       margin-bottom: 2vh;
       border-radius:17.4rem;
   }
+  
   a {
       color: #fff;
       text-decoration: none;
@@ -56,17 +59,28 @@
       justify-content: center;
   }
 
+  input {
+    width: 100%;
+    max-width: 300px; /* Adjust as needed */
+    padding: 10px;
+    margin-bottom: 10px;
+    /* border: 1px solid #ccc; */
+    border-radius: 30px;
+    font-size: 16px;
+  }
+
+  
   .submit-button button {
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
+    margin: 10px 0;
     border: none;
     border-radius: 20px;
     font-size: 18px;
     cursor: pointer;
   }
   
-
 
   .sign-up-link {
       margin-bottom: 2vh;
