--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -15,16 +15,49 @@
       background-repeat: no-repeat;
       overflow-x: hidden;
     }
-    .landingSub {
-      height: 130vh;
+    .landingSub{
+      height: 100vh;
       width: 100vw;
       margin-top: -30vh;
       background-color: #f3eddb;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   
+
+      
+
+    }
+    .landingSubContent {
+      margin-top: 40vh;
+      height: 100vh;
+      color: black;
+      overflow-x: auto;
+        overflow-y: hidden;
+        white-space: nowrap;
+
+
+    }
+    .landingSubContentItem {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
     }
     .landingImage img {
       width: 100%;
       height: 100%;
       object-fit: cover; /* Ensure the image covers the container */
+    }
+    .containerImg {
+
+      width: 50%;
+      border-radius:1.4rem;
+    }
+    .container {
+      width: 0vw;
+      border-radius:1.4rem;
     }
     
     .landingInfo {
