--- a/src/pages/Logo/Logo.css
+++ b/src/pages/Logo/Logo.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-top: 2px;;
+    padding-top: 25px;
     width: 50%;
     height: auto;
 }
