--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -1,4 +1,3 @@
-/* Style the form */
 .survey {
     display: flex;
 background-color: rgb(171, 202, 187);
@@ -17,6 +16,7 @@ background-color: rgb(171, 202, 187);
     justify-content: center;
     width: 50%;
     height: 50vh;
+    margin: auto;
     
  
 }
