--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -1,13 +1,19 @@
 .survey {
-    display: flex;
-background-color: rgb(171, 202, 187);
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 120vh;
-    margin-top: -20vh;
- 
+        
+      background-color: rgb(171, 202, 187);
+         width: 100vw;
+          height: 100vh;
+          margin: auto;
+          margin-top: -10vh;
+          display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 0;
+            
+      
+       
+    
 }
 .surveyContent {
     display: flex;
@@ -25,24 +31,30 @@ form.surveyForm {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    height: 60vh;
-    
  
-
 }
+.surveyForm input {
+    width: 60vw;
+    height: 3.5rem;
+    margin-bottom: 1rem;
+    border: none;
+    border-radius: 5px;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    border-radius:17.4rem;
+   
+} 
 .formContent {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 50vh;
+ 
     
  
 
 }
-.surveyForm {
+/* .surveyForm {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,8 +62,8 @@ form.surveyForm {
     width: 100%;
     height: 80vh;
     
- 
-}
+  */
+/* } */
 
 .surveyButtons {
     display: flex;
@@ -107,12 +119,12 @@ form.surveyForm {
     cursor: pointer;
 }
 .dropdownOptions {
-    width: 30vw;
-    height: 3rem;
+    width:20vw;
+    height: 3.5rem;
     margin-bottom: 1rem;
     border: none;
     border-radius: 5px;
-    padding: 0 1rem;
+    padding: 0;
     font-size: 1.2rem;
     border-radius:17.4rem;
 }
