--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -46,12 +46,12 @@
   }
   
   a {
-      color: #fff;
+      color: #ffffff;
       text-decoration: none;
       margin-bottom: 2vh;
   }
   .signIn-form h1 {
-      color: #fff;
+      color: #2e8ef5;
       font-size: 2.5rem;
       margin-bottom: 1rem;
   }
@@ -78,31 +78,29 @@
 
   
   .submit-button button {
-    background-color: #007bff;
+    background-color: #2e8ef5;
     color: #fff;
-    padding: 10px 20px;
+    padding: 30px 60px;
     margin: 10px 0;
     border: none;
-    border-radius: 20px;
+    border-radius: 60px;
     font-size: 18px;
     cursor: pointer;
   }
   .submit-button button:hover {
     background-color: transparent;
-    color: var(--header-main);
-    border: 4px solid var(--header-main);
+    color: #2e8ef5;
+    border: 4px solid #2e8ef5;
     cursor: pointer;
 }
 
-  .sign-up-link {
-      margin-bottom: 2vh;
-  }
+
 
   #closeForm {
     position: absolute;
-    top: 0;
+    top: 15%;
     
-    right: 0;
+    right: 10%;
     margin: 1rem;
     font-size: 1.5rem;
     color: #ffffff;
@@ -113,8 +111,9 @@
     cursor: pointer;
   }
 
-
-
+.signInLink{
+  color: #272727;
+}
   .animate-pop-in {
       animation: pop-in 0.4s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
       opacity: 0;
@@ -122,6 +121,7 @@
     
     .sign-up-link{
       animation-delay: 0.6s;
+      margin-bottom: 2vh;
     }
     
 
