--- a/src/pages/SignInSignUp/Components/SignUp/SignUp.css
+++ b/src/pages/SignInSignUp/Components/SignUp/SignUp.css
@@ -30,24 +30,24 @@
  
 }
 .sign-form1 button {
-  background-color: #007bff;
+  background-color: #2e8ef5;
   color: #fff;
-  padding: 10px 20px;
+  padding: 30px 60px;
   margin: 10px 0;
   border: none;
-  border-radius: 20px;
+  border-radius: 60px;
   font-size: 18px;
   cursor: pointer;
 }
 .sign-form1 button:hover {
     background-color: transparent;
-    color: var(--header-main);
-    border: 4px solid var(--header-main);
+    color: #2e8ef5;
+    border: 4px solid #2e8ef5;
     cursor: pointer;
 }
 
 .sign-form h1 {
-    color: #fff;
+    color: #2e8ef5;
     font-size: 2.5rem;
     margin-bottom: 1rem;
 }
@@ -87,6 +87,7 @@
   
   .signUpTitle {
     animation-delay: 0.5s;
+    color: #2e8ef5;
   }
   
   .header-button {
