--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -7,7 +7,7 @@
         height: 100vh;
         margin-top: -10vh;
         width: 100vw;
-        background-color: #f7f7f7;
+        background-color: #fff6e1;
 
     }
 
