--- a/src/pages/Logo/Logo.css
+++ b/src/pages/Logo/Logo.css
@@ -6,6 +6,13 @@
     padding-top: 25px;
     width: 50%;
     height: auto;
+    margin: 0;
+}
+.doggyStuff-logo a {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 500px)
@@ -18,6 +25,7 @@
         padding-top: 15px;;
         width: 85%;
         height: auto;
+        margin: 0;
     }
 
     /* .doggyStuff-logo img {
