--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -20,17 +20,15 @@
   width: 100vw;
 }
 
+.sign-in {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+ }
 
 
-  .signIn-form {
-  position: absolute;
-      width: 80%;
-      height: 90vh;
-      display: flex;
-      flex-direction: column;
-      align-items:center;
-      justify-content: center;
-  }
   
   .mobile {
     display: none;
@@ -46,15 +44,11 @@
   }
   
   a {
-      color: #ffffff;
+      color: var( --black-text);
       text-decoration: none;
       margin-bottom: 2vh;
   }
-  .signIn-form h1 {
-      color: #2e8ef5;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-  }
+
 
   .signInImg {
       width: 100%;
@@ -78,7 +72,7 @@
 
   
   .submit-button button {
-    background-color: #2e8ef5;
+    background-color: var( --main-blue);
     color: #fff;
     padding: 30px 60px;
     margin: 10px 0;
@@ -89,8 +83,8 @@
   }
   .submit-button button:hover {
     background-color: transparent;
-    color: #2e8ef5;
-    border: 4px solid #2e8ef5;
+    color: var( --main-blue);
+    border: 4px solid var( --main-blue);
     cursor: pointer;
 }
 
@@ -112,7 +106,7 @@
   }
 
 .signInLink{
-  color: #272727;
+  color: var( --black-text);
 }
   .animate-pop-in {
       animation: pop-in 0.4s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
@@ -148,7 +142,7 @@
       }
     }
     
-  /*   
+  
     @media screen and (max-width: 750px)
     {
       button#SignIn{
@@ -157,17 +151,36 @@
     button#SignUp{
       display: none;
     }
-    .mobile {
+    /* .mobile {
       display: flex;
     }
     #mobileSignUp img {
       width: 8vw;
-      height: 8vw;
+      height: 5vw;
   
-    }
-    #mobileSignIn {
+    } */
+    .sign-form {
+      background-image: url(https://live.staticflickr.com/65535/53140367284_8198580b2a_b.jpg);
+      width: 100vw;
+      height: 100vh;
+      justify-content: flex-start;
   
-    }
+
 
       
-    } */
+    }
+    form {
+      width: 80vw;
+      max-width: 300px; /* Adjust as needed */
+      padding: 10px;
+      margin-bottom: 10px;
+      /* border: 1px solid #ccc; */
+      border-radius: 30px;
+      font-size: 16px;
+      
+    }
+    .sign-in {
+      margin-top: 10vh;
+    }
+
+  }
