--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -19,6 +19,12 @@
   height: 90vh;
   width: 100vw;
 }
+.signformclose {
+  width: 5vh;
+  height: 10vh;
+  filter: brightness(0) saturate(100%) invert(51%) sepia(97%) saturate(392%) hue-rotate(160deg) brightness(96%) contrast(92%);
+  opacity: 1;
+}
 
 .sign-in {
   display: flex;
@@ -99,6 +105,7 @@
     font-size: 1.5rem;
     color: #ffffff;
     cursor: pointer;
+    
   }
   #closeForm:hover {
     color: #ff6565;
