--- a/src/pages/SignInSignUp/Components/SignUp/SignUp.css
+++ b/src/pages/SignInSignUp/Components/SignUp/SignUp.css
@@ -10,8 +10,8 @@
   border-bottom-left-radius: 10vh;
   border-bottom-right-radius: 10vh;
   margin-top: -10vh;
-  background-color: #b8a2a2;
-  background-image: url(https://live.staticflickr.com/65535/53140196546_80bad8a6d2_h.jpg);
+  background-color: #f0eccc;
+  /* background-image: url(https://live.staticflickr.com/65535/53140196546_80bad8a6d2_h.jpg); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
