--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -40,10 +40,9 @@
     }
     .landingSubContentItem {
       display: flex;
-      width: 200vw;
+      width: auto;
       flex-direction: row;
-      justify-content: center;
-      align-items: center;
+      margin: 2rem;
 
     }
     .landingImage img {
@@ -52,13 +51,15 @@
       object-fit: cover; /* Ensure the image covers the container */
     }
     .containerImg {
-
       width: 50%;
       border-radius:1.4rem;
     }
     .container {
-      width: 40vw;
+      width: 100vw;
       border-radius:1.4rem;
+
+  
+
     }
     
     .landingInfo {
