--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 50%;
+    width: 100%;
     height: 50vh;
     margin: auto;
     
@@ -34,7 +34,7 @@ form.surveyForm {
  
 }
 .surveyForm input {
-    width: 60vw;
+    width:30vw;
     height: 3.5rem;
     margin-bottom: 1rem;
     border: none;
@@ -42,18 +42,81 @@ form.surveyForm {
     padding: 0 1rem;
     font-size: 1.2rem;
     border-radius:17.4rem;
+    margin: 0;
    
 } 
+label, legend {
+    margin-bottom: 1vh;
+}
 .formContent {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 60vw;
  
     
  
 
 }
+#dog_size, #dog_sex p {
+    width: 5vw;
+    padding: 1rem;
+}
+.dogSex, .dogSize {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 30vw;
+    margin-top: 2vh;
+    accent-color: var(--header-main);
+
+    
+ 
+}
+.dogSexOption, .dogSizeOption{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:10vw;
+
+    
+ 
+}
+.dogSexOption, .dogSizeOption, button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-width:10vw;
+    height: 10vw;
+    background-color: var(--main-blue);
+    color: #fff;
+    font-weight: 700;
+    margin: 0.5rem;
+
+    border: 0;
+}
+ button:hover {
+    background-color: var(--header-main-hover);
+    color: var(--header-main);
+    border: 4px solid var(--header-main);
+    cursor: pointer;
+}   
+.dogSizeOption.selected,
+.dogSexOption.selected,
+.dogSizeOption:active,
+.dogSexOption:active {
+  background-color: var(--header-main-hover);
+  color: var(--header-main);
+  border: 4px solid var(--header-main);
+  cursor: pointer;
+}
+ 
+ 
+
 /* .surveyForm {
     display: flex;
     flex-direction: column;
@@ -93,6 +156,7 @@ form.surveyForm {
     justify-content: center;
     width: 100%;
     margin: 0;
+    margin-bottom: 1vh;
     
 }
 .surveyFormNum{
@@ -105,7 +169,7 @@ right: 10%;
 
 .surveyButton {
     height: 7vh;
-    width: 40%;
+    width: 35%;
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -125,16 +189,18 @@ right: 10%;
     cursor: pointer;
 }
 .dropdownOptions {
-    width:20vw;
+    width:30vw;
     height: 3.5rem;
     margin-bottom: 1rem;
     border: none;
     border-radius: 5px;
-    padding: 0;
+    padding: 1rem;
     font-size: 1.2rem;
     border-radius:17.4rem;
 }
-
+.dropdownOptions p {
+margin: 2rem;
+}
 
 .confirmation {
     display: flex;
@@ -142,6 +208,14 @@ right: 10%;
     align-items: flex-start;
     justify-content: center;
 }
+
+
+
+
+
+
+
+
 
 
 
