--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -252,6 +252,31 @@
       /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
       color: white;
     }
+
+
+    .profileicon {
+      height: 5vh;
+      padding: 0;
+      margin: 0;
+      margin-left: 5px;
+      margin-right: 0px;
+      width: auto;
+      z-index: 100;
+      color: var(--header-main);
+      font-size: 1rem;
+    }
+
+    .signedinnav {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      width: 20vw;
+      z-index: 100;
+    }
     
 
     @media screen and (max-width: 750px)
