--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -79,7 +79,7 @@
   
   .submit-button button {
     height: 7vh;
-    width: 40%;
+    width: 10vw;
     margin: 0;
     display: flex;
     flex-direction: row;
