--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,82 +1,98 @@
-
 .profile {
-  height: 110vh;
+  margin: 0 auto;
   width: 100vw;
+  height: 100vh;
   margin: 0;
   margin-top: -10vh;
-  background-color: #e7efff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-bottom-left-radius: 10vh;
-  border-bottom-right-radius: 10vh;
-  align-items:center;
-  position: relative; /* Add position relative to the parent container */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  overflow-x: hidden;
-}
-.maindashboard {
-  height: 80vh;
-  width: 100vw;
-  
-
+  background-color: #f5f5f5;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  position: relative; /* Add position relative to the parent container */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  overflow-x: hidden;
-}
-.dashboardleft, .dashboardright {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 100%;
-   
-}
-.user-image {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height:auto;
-    margin: 0;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-}
-.editinfo   {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 20vw;
-  height: 3vh;
-  margin: 0.5rem;
-  padding: 0.5rem;
-
-
+  align-items: flex-start;
   
+}
+
+.maindashboard {
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: flex-start; /* Vertically center the content */
+  height: 100vh; /* Adjust the height as needed */
+  width:80vw;
+  margin: 0;
+}
+
+.dashboardleft {
+  text-align: center; /* Center the text inside dashboardleft */
+}
+.dashboardright, .dashboardleft {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+margin-top: 20vh;
+  width: 50vw;
+  height: 100vh;
+
+}
+
+.userinfobox {
+  text-align: left; /* Align text inside userinfobox to the left */
+}
+.userdetails span {
+  text-align: left;
+}
+
+.userDetails {
+  text-align: left;
 }
 .editButtons {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 25vw;
-  height: 5vh;
-  margin: 0.5rem;
-  padding: 0.5rem;
+
 }
-.maindashboard button {
+
+.dogContainer,
+.order-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+/* Style for dog and order data */
+.dog-details,
+.order-data {
+  flex: 1;
+}
+
+/* Style for dog and order button containers */
+.dog-button-container,
+.order-button-container {
+  flex: 0; /* Prevent button containers from growing */
+  margin-left: 10px; /* Add some space between data and buttons */
+}
+
+.dashboardright button {
+ width: 10vw;
+  height: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: transparent;
+  color: #000;
+  font-size:0.8rem;
+  font-weight: 300;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  text-decoration: underline;
+}
+
+.dashboardleft button {
   height: 7vh;
-  width: 40%;
-  margin: 0;
+  width: 10vw;
+  margin: 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -86,54 +102,75 @@
   font-weight: 700;
   border-radius: 17.4rem;
   border: 0;
-
+  
 }
-
-.maindashboard button:hover {
+.dashboardleft button:hover{
   background-color: var(--header-main-hover);
   color: var(--header-main);
   border: 4px solid var(--header-main);
   cursor: pointer;
-
 }
 
-.dogContainer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    margin: 0;
+.linebreak hr {
+  width: 80%;
+  height: 0.2px;
+  background-color: #000;
 }
 
 .userpetbox, .userorderbox {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    width: 100%;
-    height:auto;
-    margin: 0;
+  min-width: 30vw;
+
 }
 
-.userDetails {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height:auto;
-    
+.dog-overlay, .order-overlay {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  right: 0;
+  top: 0;
+  width: 50vw;
+
+  height: 100vh;
+  background-color: #f5f5f5;
 }
 
+.dog-overlay button, .order-overlay button {
+  height: 7vh;
+  width: 10vw;
+  margin: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--header-main);
+  color: #ffffff;
+  font-weight: 700;
+  border-radius: 17.4rem;
+  border: 0;
+}
+.dog-overlay button:hover, .order-overlay button:hover {
+  background-color: var(--header-main-hover);
+  color: var(--header-main);
+  border: 4px solid var(--header-main);
+  cursor: pointer;
+}
 
-.welcome-text {
-    font-size: 2rem;
-    margin: 0;
-    padding: 0;
-    color:var(--header-main);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    text-align: left;
-    margin-bottom: 2vh;
+.dogimg img {
+  width:5vw;
+  height: auto;
+  margin: 1rem;
+  object-fit: cover;
+  border-radius: 5px;
+  opacity: 0.5;
+}
+
+.dogimg {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+
 }
