--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -209,6 +209,8 @@
     #SignIn, #dropdown-menu-signout-button {
       border-radius: 20px;
       display: flex;
+      justify-content: center;
+      align-items: center;
       border: none;
       padding: 0vh;
       margin: 0;
@@ -306,6 +308,8 @@
       .profileicon {
         height: 3.5vh;
       }
-
+     #dropdown-menu-signout-button{
+      display: none;
+     }
    
     }
