--- a/src/pages/SignInSignUp/Components/SignIn/SignIn.css
+++ b/src/pages/SignInSignUp/Components/SignIn/SignIn.css
@@ -79,7 +79,7 @@
   
   .submit-button button {
     height: 7vh;
-    width: 10vw;
+    width: 15vw;
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -119,43 +119,21 @@
 .signInLink{
   color: var( --black-text);
 }
-  .animate-pop-in {
-      animation: pop-in 0.4s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
-      opacity: 0;
-    }
-    
-    .sign-up-link{
-      animation-delay: 0.6s;
-      margin-bottom: 2vh;
-    }
-    
-
-    .sign-form form {
-      animation-delay: 0.7s;
-    }
-    
-    .signIntitle {
-      animation-delay: 0.5s;
-    }
-    
-    .header-button {
-      animation-delay: 1.1s;
-    }
-
-    @keyframes pop-in {
-      0% {
-        opacity: 0;
-        transform: translateY(-4rem) scale(.8);
-      }
-      100% {
-        opacity: 1;
-        transform: none;
-      }
-    }
+ 
     
   
-    @media screen and (max-width: 750px)
-    {
+    @media screen and (max-width: 750px){
+    input {
+      width: 70%;
+  
+      padding: 10px;
+      margin-bottom: 10px;
+      /* border: 1px solid #ccc; */
+      border-radius: 30px;
+      font-size: 16px;
+    }
+  
+    
       button#SignIn{
       display: none;
     }
@@ -171,14 +149,20 @@
   
     } */
     .sign-form {
-      background-image: url(https://live.staticflickr.com/65535/53140367284_8198580b2a_b.jpg);
+      background-image: url(https://live.staticflickr.com/65535/53140367284_bc0fd26b69_k.jpg);
       width: 100vw;
       height: 100vh;
       justify-content: flex-start;
-  
+     
+    }
+    .submit-button button{
+      width:30vw;
+    }
+    .signformclose{
+      width:5vw;
+      height: 5vw;
 
-
-      
+      top: auto;
     }
     form {
       width: 80vw;
