--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -70,7 +70,7 @@ label, legend {
     justify-content: center;
     width: 30vw;
     margin-top: 2vh;
-    accent-color: var(--header-main);
+
 
     
  
@@ -86,18 +86,18 @@ label, legend {
  
 }
 
-.pureCross {
+.pureCross, .dogHealth {
     display: flex;
     flex-direction: row;
     align-items: center;    
 }
-.dogSex button , .dogSize button, .pureCross button {
+.dogSex button , .dogSize button, .pureCross button, .dogHealth button{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    min-width:10vw;
-    height: 10vw;
+    height: 14vh;
+    width: 14vw;
     background-color: var(--main-blue);
     color: #fff;
     font-weight: 700;
@@ -105,7 +105,7 @@ label, legend {
 
     border: 0;
 }
-.dogSex button:hover, .dogSize button:hover, .pureCross button:hover {
+.dogSex button:hover, .dogSize button:hover, .pureCross button:hover, .dogHealth button:hover {
     background-color: var(--header-main-hover);
     color: var(--header-main);
     border: 4px solid var(--header-main);
@@ -116,13 +116,15 @@ label, legend {
 .dogSizeOption:active,
 .dogSexOption:active,
 .pureCrossOption.selected,
-.pureCrossOption:active {
-  background-color: var(--header-main-hover);
-  color: var(--header-main);
-  border: 4px solid var(--header-main);
-  cursor: pointer;
+.pureCrossOption:active 
+.dogHealthOption.selected,
+.dogHealthOption:active {
+    background-color: var(--header-main-hover);
+    color: var(--header-main);
+    border: 4px solid var(--header-main);
+    cursor: pointer;
 }
- 
+
  #backSurveyButton {
     position: absolute;
     top: 15vh;
